--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@vercel/postgres": "^0.5.0",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.1",
     "clsx": "^2.0.0",
-    "next": "^14.0.2",
+    "next": "^14.1.0",
     "next-auth": "^5.0.0-beta.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
